# fin-control-be-rs

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  local-docker.env
.cargo/: config.toml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma-client/: Cargo.toml
src/: main.rs  prisma.rs
src/api/: mod.rs
src/api/customers/: customers_handlers.rs  customers_repository.rs  customers_service.rs  mod.rs
src/api/customers/dto/: create_customer_db_dto.rs  create_customer_dto.rs  mod.rs  update_customer_db_dto.rs  update_customer_dto.rs
src/api/customers/entities/: customer_entity.rs  mod.rs
src/api/customers/enums/: mod.rs  sex.rs
src/api/customers/structs/: customer_from_db.rs  mod.rs  state.rs
src/api/customers/traits/: customers_repository.rs  mod.rs
src/api/customers/types/: api_state.rs  customer_from_db.rs  mod.rs  sex.rs
src/api/expenses/: expenses_handlers.rs  expenses_repository.rs  expenses_service.rs  mod.rs
src/api/expenses/dto/: create_expense_db_dto.rs  create_expense_dto.rs  find_expenses_dto.rs  mod.rs  update_expense_db_dto.rs  update_expense_dto.rs
src/api/expenses/entities/: expense_entity.rs  mod.rs
src/api/expenses/enums/: expense_category.rs  mod.rs
src/api/expenses/structs/: expense_from_db.rs  mod.rs  state.rs
src/api/expenses/traits/: expenses_repository.rs  mod.rs
src/api/expenses/types/: expense_category.rs  expense_from_db.rs  mod.rs
src/shared/: mod.rs
src/shared/config/: errors.rs  mod.rs  tracing.rs  types.rs
src/shared/errors/: app_error.rs  http_error.rs
src/shared/extractors/: mod.rs  open_api_json.rs
src/shared/handlers/: mod.rs
src/shared/logger/: mappings.rs  mod.rs
src/shared/mods/: mod.rs
src/shared/mods/auth/: claims.rs  extractors.rs  mod.rs  roles.rs  service.rs  user.rs
src/shared/mods/auth/enums/: errors.rs  mod.rs  roles.rs
src/shared/mods/auth/middlewares/: mod.rs  role_based_bearer_auth.rs
src/shared/mods/auth/services/: auth0.rs
src/shared/mods/auth/structs/: auth0_claims.rs  claims.rs  mod.rs  user.rs
src/shared/mods/auth/traits/: mod.rs  role_based_bearer_auth.rs
src/shared/mods/cache/: mod.rs
src/shared/mods/cache/enums/: errors.rs
src/shared/mods/cache/middlewares/: json_cache.rs  mod.rs
src/shared/mods/cache/moddlewares/: cache.rs  json_cache.rs
src/shared/mods/cache/traits/: cache_service.rs
src/shared/mods/prisma/: mod.rs
src/shared/mods/redis/: middlewares.rs  mod.rs  redis_service.rs
src/shared/modules/: mod.rs
src/shared/modules/auth/: mod.rs
src/shared/modules/auth/enums/: roles.rs
src/shared/modules/auth/errors/: mod.rs
src/shared/modules/auth/middlewares/: mod.rs  role_based_bearer_auth.rs
src/shared/modules/auth/services/: auth0.rs
src/shared/modules/auth/structs/: auth0_claims.rs  user.rs
src/shared/modules/auth/traits/: role_based_bearer_auth_service.rs
src/shared/modules/cache/: mod.rs
src/shared/modules/cache/errors/: mod.rs
src/shared/modules/cache/middlewares/: json_cache.rs
src/shared/modules/cache/traits/: cache_service.rs  mod.rs
src/shared/modules/db/entities/: customer.rs  expense.rs  mod.rs  prelude.rs  regular_payment.rs  sea_orm_active_enums.rs
src/shared/modules/db/utils/: mod.rs
src/shared/modules/logger/: errors.rs  middlewares.rs  mod.rs  utils.rs
src/shared/modules/open_api/: mod.rs
src/shared/modules/redis/: mod.rs  redis_service.rs
src/shared/modules/redis/errors/: mod.rs
src/shared/traits/: pagination.rs
src/shared/utils/: mod.rs
