[package]
name = "fin-control-be-rs"
version = "0.4.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"
members = [
    "prisma-cli",
    "prisma-client"
]

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.45.1", features = ["macros"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["trace", "auth", "request-id"] }

# Serialization/Deserialization
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive", "rc"] }

# Config
dotenv = "0.15.0"
envy = "0.4.2"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Authentication
alcoholic_jwt = "4091.0.0"

# Database ORM
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["migrations", "postgresql"] }
prisma-client = { path = "./prisma-client" }

# Requests
reqwest = { version = "0.12.21", features = ["json"] }

# Redis
redis = { version = "0.32.3", features = ["tokio-comp", "connection-manager"] }

# Logger
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = "0.1.41"

# Error handling
onlyerror = "0.1.5"

# Util crates
chrono = "0.4.40" # Working with dates
async-trait = "0.1.86"
base64 = "0.22.1"
futures-util = "0.3.31"
uuid = "1.15.1"

# Open API
aide = { version = "0.15.0", features = [
    "axum",
    "redoc",
    "axum-extra",
    "macros",
    "swagger",
    "scalar",
    "axum-json",
] }
schemars = { version = "0.9.0", features = ["uuid1", "chrono04"] }
