[package]
name = "fin-control-be-rs"
version = "0.4.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "auth", "request-id"] }

# Serialization/Deserialization
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive", "rc"] }

# Config
dotenv = "0.15.0"
envy = "0.4.2"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Authentication
alcoholic_jwt = "4091.0.0"

# Database ORM
sea-orm = { version = "1.1.19", features = ["macros", "sqlx-postgres", "chrono", "runtime-tokio"] }

# Requests
reqwest = { version = "0.13.2", features = ["json"] }

# Redis
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager"] }

# Logger
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing = "0.1.44"

# Error handling
onlyerror = "0.1.5"

# Util crates
chrono = "0.4.43" # Working with dates
async-trait = "0.1.89"
base64 = "0.22.1"
futures-util = "0.3.31"
uuid = "1.21.0"

# Open API
aide = { version = "0.15.1", features = [
    "axum",
    "redoc",
    "axum-extra",
    "macros",
    "swagger",
    "scalar",
    "axum-json",
] }
schemars = { version = "0.9.0", features = ["uuid1", "chrono04"] }
