[package]
name = "prisma-cli"
version = "0.1.0"
edition = "2021"

[features]
rspc = ["prisma-client-rust-cli/rspc"]

[dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7", default-features = false, features = ["migrations", "postgresql"] }